# project-chooser

./: .gitignore  Cargo.toml  LICENSE  README  README.md  aliases.sh  clippy.toml  devenv.nix  devenv.yaml  find_test.sh  install.sh  make_ebuild.sh  project-chooser-bash  time_test.sh  time_test_chooser.sh
src/: cache.rs  lib.rs  main.rs  search.rs  searcher.rs  walker.rs
src/test/: cache_test.rs  fnmut-test.rs  project-finder.rs  project-walker.rs
