[package]
authors = ["clotodex <clotodex@online.de>"]
license-file = "LICENSE"
name = "project-chooser"
description = "project indexer to quickly find and navigate to projects"
version = "0.2.0"
edition = "2018"

[package.metadata.rpm]
cargo = { buildflags = ["--release"] }
targets = { "project-chooser" = { path = "/usr/bin/project-chooser" }, "pc-recache" = { path = "/usr/bin/pc-recache" } }

[package.metadata.rpm.files]
"bin/project-chooser-bash" = { path = "/usr/bin/project-chooser-bash" }

[package.metadata.deb]
depends = "$auto"
assets = [
	["bin/project-chooser-bash", "/usr/bin/", "755"]
]

[dependencies]
clap = "2.33.0"
log = "0.4.8"
stderrlog = "0.4.3"
dirs = "2.0.2"
skim = "0.8.2"
ignore = "0.4.16"
colored = "2.0.0"
syntect = { git = "https://github.com/trishume/syntect", branch = "move-regex-use-to-module", default-features = false, features = ["assets", "parsing", "dump-load", "dump-create", "regex-fancy"]}
